styles.css
body {
    margin: 0;
    font-family: "Source Sans Pro";
}

h1, h2, h3 {
    font-family: Montserrat;
}

header {
    margin: 0;
    margin-bottom: 50px;
    width: 100%;
    height: 300px;
    position: relative;
    background-color: #328392;
    background: url(Images/andyone-26591-unsplash.jpg) no-repeat center;
    background-size: cover;
}

#overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(50, 131, 146, .7);
    display: flex;
    justify-content: center;
    align-items: center;
}

#overlay h1 {
    text-align: center;
    margin: 0;
}

#profilePic {
    width: 145px;
    height: auto;
}

#profilePic img {
    width: 100%;
    height: auto;
}

header h1 {
    margin-top: 0;
    color: white;
}

.sectionHeading {
    border-bottom: 2px solid #328392;
    width: 60%;
    text-align: center;
    margin: 0 auto;
    margin-bottom: 50px;
    padding: 15px 0;
    color: #328392;
}
/* About Me Section */

#aboutSection {
    margin: 100px 0px;
}

#aboutContainer {
    width: 60%;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
    align-content: center;
    margin-top: 50px;
}

.details {
    width: 30%;
    height: 150px;
    margin: 0;
    text-align: center;
}

.details figure {
    width: 30%;
    height: auto;
    margin: 0 auto;
    margin-top: 30px;
   
}

.details figure img {
    width: auto;
    height: 50px;
}

.details p {
    margin-bottom: 0;
    font-size: 0.9em;
    color: #328392;
    font-weight: 600;
}

/* Project Showcase */

#projectSection {
    background: url(Images/paper.jpg) no-repeat center;
    background-size: cover;
}

#overlaySection {
    background: rgba(50, 131, 146, .7);
    padding: 50px 0;
}

#instructions {
    width: 50%;
    margin: 0 auto;
    text-align: center;
    font-size: 1.1em;
    margin-bottom: 50px;
    color: white;
}

#projectContainer {
    width: 80%;
    height: auto;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.project {
    width: 35%;
    height: auto;
    display: flex;
    margin: 5px;
    margin-bottom: 0;
}

.projectImage {
    width: 100%;
    height: 100%;
    margin: 0;
}

.desc {
    
    position: relative;
    transition: .3s;
}

.desc img {
    width: 100%;
    height: 100%;
    transition: all .3s ease-in-out;
    border-radius: 4px;
}

.insideDesc {
    position: absolute;
    z-index: 1;
    top: 0%;
    width: 100%;
    height: 99%;
    color: #fff;
    opacity: 0;
    transition: .3s;
    background: rgba(0, 0, 0, 0.85);
    border-radius: 4px;
}

.insideDesc h3 {
    text-align: center;
    color: white;
    margin-top: 10%;
}

.insideDesc p {
    width: 80%;
    margin: 0 auto;
    font-size: 0.9em;
}

.desc:hover :not(img) {
    opacity: 1;
}

/* Resume */

#Resume {
    margin: 100px 0px;
}

#Resume article {
    width: 80%;
    display: flex;
    align-items: center;
    flex-direction: column;
    margin: 0 auto;
}

#viewResume {
    width: 150px;
    height: 40px;
    border-radius: 4px;
    cursor: pointer;
    border: 2px solid #328392;
    color: #328392;
    font-weight: bolder;
    transition: all .2s ease-in-out;
    outline: none;
    background-color: white;
}

#viewResume:hover {
    transform: scale(1.05, 1.05);
    background-color: #328392;
    color: white;
}

#viewResume:active {
    transform: scale(0.95, 0.95);
}

#viewResume a {
    text-decoration: none;
}

#logo {
    width: 100px;
    height: auto;
    margin-top: 100px;
}

#logo img {
    width: 100%;
    height: auto;
}

/* Footer */

footer {
    width: 100%;
    height: 100px;
    background: rgba(50, 131, 146);
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 50px;
}

footer figure {
    margin: 0 10px;
    width: 30px;
    height: auto;
    transition: all .2s ease-in-out;
}

footer figure:hover {
    transform: scale(1.05, 1.05);
}

footer figure:active {
    transform: scale(0.95, 0.95);
}

footer figure img {
    width: 100%;
    height: auto;
}

/* Media Queries */

    /* Larger Screens */

@media screen and (min-width: 2000px) {
    
    #profilePic {
        width: 300px;
        height: auto;
        margin: 0;
        margin-right: 100px;
    }

    #profilePic img {
        width: 100%;
        height: auto;
    }
    
    header {
        height: 500px;
        font-size: 2.3em;
    }
    
    .sectionHeading {
        width: 70%;
        font-size: 3em;
        border-bottom: 3px solid #328392;
        padding: 30px 0;
    }
    
    #aboutSection {
        margin-bottom: 200px;
    }
    
    #aboutContainer {
        margin-top: 100px;
    }
    
    .details {
        font-size: 1.8em;
    }
    
    .details figure {
        width: 40%;
        height: auto;
    }
    
    .details figure img {
        width: auto;
        height: 100px;
    }
    
    #instructions {
        font-size: 2em;
    }
    
    .project {
        width: 40%;
    }
    
    .insideDesc {
        font-size: 2em;
        height: 99.5%;
    }
    
    #viewResume {
        background-color: white;
        width: 300px;
        height: 100px;
        font-size: 1.6em;
        border: 3px solid #328392;
    }
    
    #logo {
        width: 200px;
        height: auto;
        margin-top: 100px;
    }

    #logo img {
        width: 100%;
        height: auto;
    }
    
    footer {
        height: 200px;
    }
    
    footer figure {
        width: 60px;
    }
    
}
/* ... */

